# cdm-minio-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: codeql.yml  dependabot.yml
.github/workflows/: test.yml
docs/: design.md
src/: main.py
src/minio/core/: base_executor.py  command_builder.py  command_executor.py  distributed_lock.py  minio_client.py  policy_builder.py  policy_creator.py
src/minio/managers/: group_manager.py  policy_manager.py  resource_manager.py  sharing_manager.py  user_manager.py
src/minio/models/: command.py  group.py  minio_config.py  policy.py  user.py
src/minio/utils/: governance.py  validators.py
src/routes/: admin.py  credentials.py  health.py  management.py  sharing.py  workspaces.py
src/service/: app_state.py  arg_checkers.py  config.py  dependencies.py  error_mapping.py  errors.py  exception_handlers.py  exceptions.py  http_bearer.py  kb_auth.py  models.py
tests/: conftest.py  test_main.py
tests/minio/core/: test_base_executor.py  test_command_builder.py  test_distributed_lock.py  test_minio_client.py  test_policy_builder.py  test_policy_creator.py
tests/minio/managers/: test_group_manager.py  test_policy_manager.py  test_resource_manager.py  (+2 more)
tests/routes/: test_credentials.py  test_health.py  test_management.py  test_sharing.py  test_workspaces.py
tests/service/: test_app_state.py  test_arg_checkers.py  test_config.py  test_dependencies.py  test_error_mapping.py  test_errors.py  test_exception_handlers.py  test_exceptions.py  test_http_bearer.py  test_kb_auth.py  test_models.py
(+7 files in other folders)
